--- a/src/components/Right Container/RightContainer.module.scss
+++ b/src/components/Right Container/RightContainer.module.scss
@@ -22,3 +22,12 @@
     right:0;
     background-color: pink;
 }
+
+.dateBox{
+    height:10%;
+    width:25%;
+    position:absolute;
+    top:0;
+    right:0;
+    background-color: rgb(128, 0, 117);
+}
