--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -36,11 +36,20 @@
 
 .imageAdd{
     display:flex;
+    flex-direction: row;
     height:40%;
     width: 90%;
     align-items: center;
     justify-content: center;
     outline: solid black;
+}
+
+.descriptionWrapper{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    height:100%;
 }
 
 .addButton{
@@ -50,5 +59,8 @@
     align-items: center;
     justify-content: center;
     outline: solid black;
+    font-size: large;
+    font-weight: 900;
+    background-color: pink;
 }
 
